--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ポートフォリオページ</title>
+        <title>aju ポートフォリオページ</title>
+        <style>
+          h1 {
+            font-size: 40px;
+            text-align: center;
+          }
+          div {
+            text-align: center;
+          }
+        </style>
     </head>
     <body>
-        
+        <h1>Koki Shimizu's portfolio page</h1>
+        <h3>・作成した成果物</h3>
+        <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a></p>
+        <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a></p>
+        <div>©Koki Shimizu 2025</div>
         <script>
 
         </script>
