背景の追加と成果物の説明を追加

--- a/index.html
+++ b/index.html
@@ -3,30 +3,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>aju ポートフォリオページ</title>
+        <title>kokiのポートフォリオページ</title>
         <style>
             * {
                 margin: 15px;
+            }
+            body { /* Changed from #canvas1 to body */
+                background: linear-gradient(to bottom right, rgb(171, 214, 243), lightyellow);
+                background-size: 100% 100%;
             }
           h1 {
             font-size: 40px;
             text-align: center;
           }
           div {
+            border: solid gray;
             text-align: center;
           }
         </style>
     </head>
     <body>
+        <p>
         <h1>Koki Shimizu's portfolio page</h1>
         <h3>・作成した成果物</h3>
         <p><img src="cal_sam.png"></p>
-        <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a></p>
+        <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a>使用言語：HTML&CSS、JavaScript</p>
         <p><img src="shoot_sam.png"></p>
-        <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a></p>
+        <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript</p>
         <div>©Koki Shimizu 2025</div>
-        <script>
-
-        </script>
+        </p>
     </body>
 </html>
