--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
         <title>kokiのポートフォリオページ</title>
         <style>
+          nav ul{
+            list-style: none;
+            display:flex;
+          }
             * {
                 margin: 15px;
             }
@@ -25,12 +28,33 @@
     <body>
         <p>
         <h1>Koki Shimizu's portfolio page</h1>
-        <h3>・作成した成果物</h3>
+        <nav>
+          <ul>
+            <li>
+              <h3>・作成した成果物</h3>
         <p><img src="cal_sam.png"></p>
         <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a>使用言語：HTML&CSS、JavaScript</p>
         <p><img src="shoot_sam.png"></p>
         <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript</p>
-        <div>©Koki Shimizu 2025</div>
+        <h3>・ハッカソンでの経験</h3>
+        <p>他社が主催したハッカソンでデザイナーとのコミュニケーションを通してDart言語を用いてUI部分のみ開発担当致しました。</p>
+        <ul>
+          <p><img src="ha.png"></p>
+          <p><img src="hb.png"></p>
+          </ul>
+          <p>フレームワーク：Flutter　使用言語：Dart</p>
         </p>
+            </li>
+            <li>
+              <h3>プロフィール</h3>
+              <p>清水　幸希 </p>
+              <p>サイバー大学 IT総合学部</p>
+              <p>これまで行ったことはPC上の作曲の音楽活動やハッカソンの経験があります。</p>
+              <p><a href = "https://github.com/aju230">Github</a></p>
+              <p><a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
+            </li>
+          </ul>
+        </nav>
+        <div>©Koki Shimizu 2025</div>
     </body>
 </html>
