ポートフォリオの訂正

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <ul>
             <li>
               <h3>・作成した成果物</h3>
-        <p><img src="cal_sam.png"></p>
+        <p><a href = "https://aju230.github.io/web_calculator_app.github.io/"><img src="cal_sam.png"></a></p>
         <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a>使用言語：HTML&CSS、JavaScript</p>
-        <p><img src="shoot_sam.png"></p>
+        <p><a href = "https://aju230.github.io/shoting_game.github.io/"><img src="shoot_sam.png"><a href = "https://aju230.github.io/shoting_game.github.io/"></a></p>
         <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript</p>
         <h3>・ハッカソンでの経験</h3>
         <p>他社が主催したハッカソンでデザイナーとのコミュニケーションを通してDart言語を用いてUI部分のみ開発担当致しました。</p>
