画像の変更と文章の追加

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             * {
                 margin: 15px;
             }
-            body { /* Changed from #canvas1 to body */
+            body {
                 background: linear-gradient(to bottom right, rgb(171, 214, 243), lightyellow);
                 background-size: 100% 100%;
             }
@@ -31,18 +31,15 @@
         <nav>
           <ul>
             <li>
-              <h3>・作成した成果物</h3>
+              <h2>・作成した成果物</h2>
         <p><a href = "https://aju230.github.io/web_calculator_app.github.io/"><img src="cal_sam.png"></a></p>
         <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a>使用言語：HTML&CSS、JavaScript</p>
+        <h3>内容</h3>
+        <p>四則演算に加えて累乗や剰余を求める計算を追加しました。また、更新せずに次の計算が出来るようにAC（リセット）ボタンを追加しました。デザイン面ではユーザがどんな演算を行ったか分かるようにしました。</p>
         <p><a href = "https://aju230.github.io/shoting_game.github.io/"><img src="shoot_sam.png"><a href = "https://aju230.github.io/shoting_game.github.io/"></a></p>
         <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript</p>
-        <h3>・ハッカソンでの経験</h3>
-        <p>他社が主催したハッカソンでデザイナーとのコミュニケーションを通してDart言語を用いてUI部分のみ開発担当致しました。</p>
-        <ul>
-          <p><img src="ha.png"></p>
-          <p><img src="hb.png"></p>
-          </ul>
-          <p>フレームワーク：Flutter　使用言語：Dart</p>
+        <h3>内容</h3>
+        <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p>
         </p>
             </li>
             <li>
@@ -50,8 +47,8 @@
               <p>清水　幸希 </p>
               <p>サイバー大学 IT総合学部</p>
               <p>これまで行ったことはPC上の作曲の音楽活動やハッカソンの経験があります。</p>
-              <p><a href = "https://github.com/aju230">Github</a></p>
-              <p><a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
+              <p><a href = "https://github.com/aju230"><img src="github-mark.png"></a></p>
+              <p>・<a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
             </li>
           </ul>
         </nav>
