オープンバッジページの追加と内容の更新

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
                 background: linear-gradient(to bottom right, rgb(171, 214, 243), lightyellow);
                 background-size: 100% 100%;
             }
+            b {
+              color: brown;
+              font-size: 20px;
+            }
           h1 {
             font-size: 40px;
+            font-style: italic;
             text-align: center;
           }
           div {
@@ -37,17 +42,19 @@
         <h3>内容</h3>
         <p>四則演算に加えて累乗や剰余を求める計算を追加しました。また、更新せずに次の計算が出来るようにAC（リセット）ボタンを追加しました。デザイン面ではユーザがどんな演算を行ったか分かるようにしました。</p>
         <p><a href = "https://aju230.github.io/shoting_game.github.io/"><img src="shoot_sam.png"><a href = "https://aju230.github.io/shoting_game.github.io/"></a></p>
-        <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript</p>
+        <b>!注意　音が出ます！</b>
+        <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript　API：CanvasAPI</p>
         <h3>内容</h3>
         <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p>
         </p>
             </li>
             <li>
-              <h3>プロフィール</h3>
+              <h3>＜プロフィール＞</h3>
               <p>清水　幸希 </p>
-              <p>サイバー大学 IT総合学部</p>
+              <p>サイバー大学 IT総合学部 IT総合学科</p>
               <p>これまで行ったことはPC上の作曲の音楽活動やハッカソンの経験があります。</p>
               <p><a href = "https://github.com/aju230"><img src="github-mark.png"></a></p>
+              <p>・<a href = "https://www.openbadge-global.com/ns/portal/openbadge/public/assertions/user/TjE1dFVLdnJXSjlOTkt1RzQwaGdVZz09">オープンバッジ</a></p>
               <p>・<a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
             </li>
           </ul>
