オープンバッジの追加とプロフィール画像の追加

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 background: linear-gradient(to bottom right, rgb(171, 214, 243), lightyellow);
                 background-size: 100% 100%;
             }
+            p2 {
+              white-space: nowrap;
+            }
             b {
               color: brown;
               font-size: 20px;
@@ -50,9 +53,15 @@
             </li>
             <li>
               <h3>＜プロフィール＞</h3>
+              <p><img src="AIImage.png"></p>
               <p>清水　幸希 </p>
               <p>サイバー大学 IT総合学部 IT総合学科</p>
               <p>これまで行ったことはPC上の作曲の音楽活動やハッカソンの経験があります。</p>
+              <h3>＜学習したスキル＞</h3>
+              <p2><a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/QkcyRWpaNmpXMnVER3ZoOE5BWFJsZz09"><img src="AIリテラシーレベル_AI Literacy level 【サイバー大学】_image.png" width="70" height="70"></a>
+                <a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/cWZVcmFBNjRDaS9ja2pZSGlwczZ0dz09"><img src="実践英語Ⅰ_Practical English (Level I) Ver. 1_image.png" width="70" height="70"></a>
+                <a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/allqWExVWHZqc0tESy9MRk9ha2piZz09"><img src="DX推進パスポート１_image.png" width="70" height="70"></a></p2>
+              <h3>＜URL＞</h3>
               <p><a href = "https://github.com/aju230"><img src="github-mark.png"></a></p>
               <p>・<a href = "https://www.openbadge-global.com/ns/portal/openbadge/public/assertions/user/TjE1dFVLdnJXSjlOTkt1RzQwaGdVZz09">オープンバッジ</a></p>
               <p>・<a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
