ml5.jsの項目の追加

--- a/index.html
+++ b/index.html
@@ -40,16 +40,23 @@
           <ul>
             <li>
               <h2>・作成した成果物</h2>
+              <h3>-<a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a></h3>
         <p><a href = "https://aju230.github.io/web_calculator_app.github.io/"><img src="cal_sam.png"></a></p>
-        <p><a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a>使用言語：HTML&CSS、JavaScript</p>
+        <p>使用言語：HTML&CSS、JavaScript</p>
         <h3>内容</h3>
         <p>四則演算に加えて累乗や剰余を求める計算を追加しました。また、更新せずに次の計算が出来るようにAC（リセット）ボタンを追加しました。デザイン面ではユーザがどんな演算を行ったか分かるようにしました。</p>
+        <h3>-<a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a></h3>
         <p><a href = "https://aju230.github.io/shoting_game.github.io/"><img src="shoot_sam.png"><a href = "https://aju230.github.io/shoting_game.github.io/"></a></p>
         <b>!注意　音が出ます！</b>
-        <p><a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a>使用言語：HTML&CSS、JavaScript　API：CanvasAPI</p>
+        <p>使用言語：HTML&CSS、JavaScript　API：CanvasAPI</p>
         <h3>内容</h3>
         <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p>
         </p>
+        <h3>-<a href = "https://aju230.github.io/ml_webcam_page.github.io/">ml5.jsによる骨格認識</a></h3>
+        <p><img src="ml5logo.png" width="200" height="100"></p>
+        <p>使用言語：HTML&CSS、JavaScript　ライブラリ：<a href="https://ml5js.org/">ml5.js</a></p>
+        <h3>内容</h3>
+        <p></p>
             </li>
             <li>
               <h3>＜プロフィール＞</h3>
