ml5.jsページの写真をボタン化

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p><br>
         </p>
         <h3>-<a href = "https://aju230.github.io/ml_webcam_page.github.io/">ml5.jsによる骨格認識</a></h3>
-        <p><img src="ml5.jssam.png" width="600" height="300"></p>
+        <p><a href = "https://aju230.github.io/ml_webcam_page.github.io/"><img src="ml5.jssam.png" width="600" height="300"></a></p>
         <p>使用言語：HTML&CSS、JavaScript　ライブラリ：<a href="https://ml5js.org/">ml5.js</a></p>
         <p>作成日：2025/07/25</p>
         <h3>内容</h3>
