courseraの証明書の追加

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
               <h3>＜URL＞</h3>
               <p><a href = "https://github.com/aju230"><img src="github-mark.png"></a></p>
               <p>・<a href = "https://www.openbadge-global.com/ns/portal/openbadge/public/assertions/user/TjE1dFVLdnJXSjlOTkt1RzQwaGdVZz09">オープンバッジ</a></p>
+              <p>・<a href = "https://www.coursera.org/account/accomplishments/verify/JFLCZ2MZVYQB?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse">Courseraコース修了証</a></p>
               <p>・<a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
             </li>
           </ul>
