レイアウトと画像の調整と内容の追加

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             font-style: italic;
             text-align: center;
           }
+          #bwi {
+            border: 5px double white;
+            text-align: center;
+          }
           div {
             border: solid gray;
             text-align: center;
@@ -44,40 +48,47 @@
             <li>
               <h2>・作成した成果物</h2>
               <h3>-<a href = "https://aju230.github.io/web_calculator_app.github.io/">電卓アプリ</a></h3>
-        <p><a href = "https://aju230.github.io/web_calculator_app.github.io/"><img src="cal_sam.png"></a></p>
+        <p id="bwi"><a href = "https://aju230.github.io/web_calculator_app.github.io/"><img src="img/cal_sam.png"></a></p>
         <p>使用言語：HTML&CSS、JavaScript</p>
         <p>作成日：2024/11/11</p>
         <h3>内容</h3>
         <p>四則演算に加えて累乗や剰余を求める計算を追加しました。また、更新せずに次の計算が出来るようにAC（リセット）ボタンを追加しました。デザイン面ではユーザがどんな演算を行ったか分かるようにしました。</p><br>
         <h3>-<a href = "https://aju230.github.io/shoting_game.github.io/">シューティングゲームアプリ</a></h3>
-        <p><a href = "https://aju230.github.io/shoting_game.github.io/"><img src="shoot_sam.png"><a href = "https://aju230.github.io/shoting_game.github.io/"></a></p>
-        <b>!注意　音が出ます！</b>
+        <p id="bwi"><a href = "https://aju230.github.io/shoting_game.github.io/"><img src="img/shoot_sam.png"><a href = "https://aju230.github.io/shoting_game.github.io/"></a></p>
+        <b><u>＊注意　音が出ます</u></b>
         <p>使用言語：HTML&CSS、JavaScript　API：CanvasAPI</p>
         <p>作成日：2025/01/10</p>
         <h3>内容</h3>
         <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p><br>
         </p>
         <h3>-<a href = "https://aju230.github.io/ml_webcam_page.github.io/">ml5.jsによる骨格認識</a></h3>
-        <p><a href = "https://aju230.github.io/ml_webcam_page.github.io/"><img src="ml5.jssam.png" width="600" height="300"></a></p>
+        <p id="bwi"><a href = "https://aju230.github.io/ml_webcam_page.github.io/"><img src="img/ml5.jssam.png" width="600" height="300"></a></p>
         <p>使用言語：HTML&CSS、JavaScript　ライブラリ：<a href="https://ml5js.org/">ml5.js</a></p>
         <p>作成日：2025/07/25</p>
         <h3>内容</h3>
         <p>顔認識、手の認識、体の骨格の認識する機械学習のml5.jsライブラリを使ってwebカメラからリアルタイムで認識するサイトを作りました。</p>
         <p3>＊Webカメラの許可が必要です。</p3>
+        
+        <h3><br>-<a href = "https://aju230.github.io/Herb_Web_dictionary.github.io/">身近な薬草web図鑑</a></h3>
+        <p id="bwi"><a href = "https://aju230.github.io/Herb_Web_dictionary.github.io/"><img src="img/ysam.png" width="400" height="400"></a></p>
+        <p>使用言語：HTML&CSS、JavaScript</p>
+        <p>作成日：2025/09/01</p>
+        <h3>内容</h3>
+        <p>私自身が撮影した写真やそれぞれの薬草の効能を説明し、知っておくと面白いとなるような薬草web図鑑を作成しました。</p>
             </li>
             <li>
               <h3>＜プロフィール＞</h3>
-              <p><img src="AIImage.png"></p>
+              <p><img src="img/AIImage.png"></p>
               <p>清水　幸希 </p>
               <p>サイバー大学 IT総合学部 IT総合学科</p>
               <p>私がこれまで力を入れました学問は情報学です。大学では主にweb制作やPythonプログラミングでの文法の理解、そしてmySQLでのデータベースの見方や操作を学びました。</p>
               <p>学外で行ったことはPC上の作曲の音楽活動やハッカソンでのモバイルアプリケーションのUI部分の作成の経験があります。</p>
               <h3>＜学習したスキル＞</h3>
-              <p2><a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/QkcyRWpaNmpXMnVER3ZoOE5BWFJsZz09"><img src="AIリテラシーレベル_AI Literacy level 【サイバー大学】_image.png" width="70" height="70"></a>
-                <a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/cWZVcmFBNjRDaS9ja2pZSGlwczZ0dz09"><img src="実践英語Ⅰ_Practical English (Level I) Ver. 1_image.png" width="70" height="70"></a>
-                <a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/allqWExVWHZqc0tESy9MRk9ha2piZz09"><img src="DX推進パスポート１_image.png" width="70" height="70"></a></p2>
+              <p2><a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/QkcyRWpaNmpXMnVER3ZoOE5BWFJsZz09"><img src="ob/AIリテラシーレベル_AI Literacy level 【サイバー大学】_image.png" width="70" height="70"></a>
+                <a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/cWZVcmFBNjRDaS9ja2pZSGlwczZ0dz09"><img src="ob/実践英語Ⅰ_Practical English (Level I) Ver. 1_image.png" width="70" height="70"></a>
+                <a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/allqWExVWHZqc0tESy9MRk9ha2piZz09"><img src="ob/DX推進パスポート１_image.png" width="70" height="70"></a></p2>
               <h3>＜URL＞</h3>
-              <p><a href = "https://github.com/aju230"><img src="github-mark.png"></a></p>
+              <p><a href = "https://github.com/aju230"><img src="img/github-mark.png"></a></p>
               <p>・<a href = "https://www.openbadge-global.com/ns/portal/openbadge/public/assertions/user/TjE1dFVLdnJXSjlOTkt1RzQwaGdVZz09">オープンバッジ</a></p>
               <p>・<a href = "https://www.coursera.org/account/accomplishments/verify/JFLCZ2MZVYQB?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse">Courseraコース修了証</a></p>
               <p>・<a href = "https://music.youtube.com/channel/UCLqazCLUxg4axxdYWHMDSag?si=4bonXC0k5k4UmiO1">音楽活動（YouTube Music）</a></p>
