プロフィール概要の変更

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <p><img src="img/AIImage.png"></p>
               <p>清水　幸希 </p>
               <p>サイバー大学 IT総合学部 IT総合学科</p>
-              <p>私がこれまで力を入れました学問は情報学です。大学では主にweb制作やPythonプログラミングでの文法の理解、そしてmySQLでのデータベースの見方や操作を学びました。</p>
+              <p>私がこれまで力を入れました学問は情報学です。大学では主にJavaScriptを使用したweb制作やPythonプログラミングでの文法の理解、そしてSQLを使用してのデータベースの閲覧や操作を学びました。</p>
               <p>学外で行ったことはPC上の作曲の音楽活動やハッカソンでのモバイルアプリケーションのUI部分の作成の経験があります。</p>
               <h3>＜学習したスキル＞</h3>
               <p2><a href="https://www.openbadge-global.com/api/v1.0/openBadge/v2/Wallet/Public/GetAssertionShare/QkcyRWpaNmpXMnVER3ZoOE5BWFJsZz09"><img src="ob/AIリテラシーレベル_AI Literacy level 【サイバー大学】_image.png" width="70" height="70"></a>
