タブのデザインの更新と内容の追加

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
                 max-width: 100%; 
                 height: auto;   
             }
+            button {
+                background-color: yellowgreen;
+                color: green;
+                border: none;
+                padding: 10px 20px;
+                font-weight: bold;
+                cursor: pointer;
+            }
+            button:hover {
+            background-color: white;
+         }
 
             /* スマホ向けのスタイルを指定 */
             @media (max-width: 768px) {
@@ -170,6 +181,15 @@
 
             function Aii() {
                 age.innerHTML = `<h2>・生成AIと競合して作成した成果物</h2>
+                    <h3>-　Lineを使用した自宅のIoTシステム</h3>
+                    <p id="bwi"><img src="img/linehe.jpg" height="350" width="250" alt="骨格認識のスクリーンショット"></p>
+                    <p>使用言語：JavaScript　使用ツール：Google App Script<br>API：Line Messaging API、SwitchBot API、OpenWeatherMap API（天気API）</p>
+                    <p>使用した生成AI：Gemini2.5Pro</p>
+                    <p>作成日：2025/02/07～現在もアップデート等開発中</p>
+                    <h3>内容</h3>
+                    <p>私自身が開発した箇所はLineのメッセージの内容や、ボタンの作成とAPIを連携する箇所を携わりました。</p>
+                    <p>生成AIには自動応答するメッセージや、IoTデバイスを通して雨が降ったときの通知を送るようにJavaScriptを生成致しました。</p><br>
+
                     <h3>-<a href = "https://aju230.github.io/Web_music_used_AI.github.io/">架空の音響機器メーカーのHP</a></h3>
                     <p id="bwi"><a href = "https://aju230.github.io/Web_music_used_AI.github.io/"><img src="img/aisam.png" height="450" width="450" alt="作成ページのスクリーンショット"></a></p>
                     <p>使用言語：HTML&CSS、JavaScript</p>
@@ -184,15 +204,7 @@
                     <p>使用した生成AI：Gemini2.5Pro</p>
                     <p>作成日：2025/09/15</p>
                     <h3>内容</h3>
-                    <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p><br>
-                
-                    <h3>-　Lineを使用した自宅のIoTシステム</h3>
-                    <p id="bwi"><img src="img/linehe.jpg" height="350" width="250" alt="骨格認識のスクリーンショット"></p>
-                    <p>使用言語：JavaScript　使用ツール：Google App Script<br>API：Line Messaging API、SwitchBot API、OpenWeatherMap API（天気API）</p>
-                    <p>使用した生成AI：Gemini2.5Pro</p>
-                    <p>作成日：2025/07/25</p>
-                    <h3>内容</h3>
-                    <p>顔認識、手の認識、体の骨格の認識する機械学習のml5.jsライブラリを使ってwebカメラからリアルタイムで認識するサイトを作りました。</p>`;
+                    <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p>`;
             }
         </script>
         <div>©Koki Shimizu 2025</div>
