写真の追加と内容の追加

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
             }
 
             function Aii() {
-                age.innerHTML = `<h2>・生成AIと競合して作成した成果物</h2>
+                age.innerHTML = `<h2>・生成AIを活用した成果物</h2>
                     <h3>-　Lineを使用した自宅のIoTシステム</h3>
-                    <p id="bwi"><img src="img/linehe.jpg" height="350" width="250" alt="骨格認識のスクリーンショット"></p>
+                    <p id="bwi"><img src="img/dece.jpg" height="350" width="250" alt="ハブ"><img src="img/preline.gif" height="350" width="250" alt="bot画面"></p>
                     <p>使用言語：JavaScript　使用ツール：Google App Script<br>API：Line Messaging API、SwitchBot API、OpenWeatherMap API（天気API）</p>
                     <p>使用した生成AI：Gemini2.5Pro</p>
                     <p>作成日：2025/02/07～現在もアップデート等開発中</p>
@@ -196,7 +196,7 @@
                     <p>使用した生成AI：Gemini2.5Pro、Imagen4（画像生成）、Veo3（動画生成）</p>
                     <p>作成日：2025/09/08</p>
                     <h3>内容</h3>
-                    <p>四則演算に加えて累乗や剰余を求める計算を追加しました。また、更新せずに次の計算が出来るようにAC（リセット）ボタンを追加しました。デザイン面ではユーザがどんな演算を行ったか分かるようにしました。</p><br>
+                    <p>架空の音楽メーカーのHPを、生成AIを活用して作成しました。CSSや文章、画像や映像も生成AIが生成し、私自身はタブの切り替え機能の追加や文章の校正や画像の貼り付け位置などを調整しました。</p><br>
                     
                     <h3>-　モバイル版電卓アプリ</h3>
                     <p id="bwi"><img src="img/pre.gif" alt="電卓アプリのスクリーンショット"></p>
@@ -204,7 +204,7 @@
                     <p>使用した生成AI：Gemini2.5Pro</p>
                     <p>作成日：2025/09/15</p>
                     <h3>内容</h3>
-                    <p>的に当たったらポイントが入るようにしました。工夫した点は、一部の早い動きの的は高得点が入るようにしたり、自作した効果音で的に当たったか分かりやすくしたシューティングゲームです。</p>`;
+                    <p>UIの設計は自身で行い、計算部分のシステムは生成AIで開発しました。</p>`;
             }
         </script>
         <div>©Koki Shimizu 2025</div>
